[gd_scene load_steps=4 format=3 uid="uid://d1s2cax58nb4o"]

[ext_resource type="Script" path="res://shared/ui/menu/missions/active_mission.gd" id="1_imrs4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ahs4"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.290196, 0.462745, 0.258824, 0.294118)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 5
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5grkq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ActiveMission" type="PanelContainer"]
offset_right = 193.0
offset_bottom = 85.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4ahs4")
script = ExtResource("1_imrs4")

[node name="ordering" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="header" type="HBoxContainer" parent="ordering"]
layout_mode = 2

[node name="label" type="Label" parent="ordering/header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mission #1"

[node name="collect_button" type="Button" parent="ordering/header"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Get Rewards"

[node name="remove_button" type="Button" parent="ordering/header"]
layout_mode = 2
size_flags_horizontal = 10
text = "Remove for Fee"

[node name="body" type="HBoxContainer" parent="ordering"]
layout_mode = 2

[node name="spacing" type="PanelContainer" parent="ordering/body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_5grkq")

[node name="kills" type="VBoxContainer" parent="ordering/body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="resources" type="VBoxContainer" parent="ordering/body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="rewards" type="VBoxContainer" parent="ordering/body"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 1.5

[node name="punishments" type="VBoxContainer" parent="ordering/body"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 1.5

[node name="expire" type="Label" parent="ordering"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.00392157, 0, 1)
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ordering/header/remove_button" to="." method="_on_remove_button_pressed"]
